HCD-80 Enables Java 17 and 21
Enables JDK 17 by backporting CC 5 configuration changes, and JDK 21 by
backporting JDK 22 configurations.
Backports CASSANDRA-17992 and CASSANDRA-18729 introducing Bouncy Castle,
Netty native libraries (netty-transport-native-epoll), and updating
tests for TLSv1.3 support.

Aligns as much as possible in terms of formatting, fixes, and any
helpfull addiont (e.g. -Xss settings).

NOTES:
 * For JDK 17 we could use `--add-exports java.base/sun.security.x509`
   to enable the required functionality for our SSL tests. However,
   this doesn't not work for JDK 21, requiring us to add Bouncy Castle
   dependency.
 * "netty-transport-native-epoll" is required when running tests in
   JDK 17.
 * Updates `--add-exports` / `--add-opens` based on test runs failures.